--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
     background-image: url(objects/Backgrouds/bsc-bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+
 }
 .container{
     padding: 10px 10%;
@@ -76,7 +77,7 @@ nav ul li a:hover::after{
 .pic{
     background-image:url(objects/Images/about-img.jpg);
     background-size:cover;
-    width: 50vh;
+    width: 40vh;
     height: 70vh;
     box-shadow: -3px 3px 7px #ffb81c;
     border: 1px solid #fff;
@@ -336,17 +337,22 @@ nav .fas{
 }
 /*---------- css for small screen------------------*/
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 643px){
+    body{
+        font-family: fantasy;
+    }
     #header{
-        background-image: url(objects/Backgrouds/msc-bg.jpg);
+        background-image: url(objects/Backgrouds/msc-bg2.jpg);
         background-size: cover;
+        background-position-x: right 30x;
+         font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
     .logo{
         margin-left: -20px;
     }
     .header-text{
         margin-left: -20px;
-        margin-top: 120%;
+        margin-top: 155%;
         font-size: 16px;
     }
     .header-text h1{
@@ -380,12 +386,12 @@ nav .fas{
     .about-col-1, .about-col-2{
         flex-basis:100%;
     }
-    .pic2{
+    .pic{
         margin-left: 8px;
-        margin-bottom: 14px;
+        margin-bottom: 20px;
     }
     .about-col-2 .about-cont{
-        margin-top: 5px;
+        margin-top: 10pxpx;
     }
     .sub-title{
         font-size: 40px;
