--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ nav ul li a:hover::after{
 .pic{
     background-image:url(objects/Images/about-img.jpg);
     background-size:cover;
-    width: 40vh;
+    width: 60vh;
     height: 70vh;
     box-shadow: -3px 3px 7px #ffb81c;
     border: 1px solid #fff;
@@ -338,6 +338,22 @@ nav .fas{
 /*---------- css for small screen------------------*/
 
 @media only screen and (max-width: 643px){
+    @keyframes appear {
+        from{
+            opacity: 0;
+            scale: 0.5;
+        }
+        to{
+            opacity: 1;
+            scale: 1;
+        }
+        
+    }
+    .block{
+        animation: appear linear;
+        animation-timeline: view();
+        animation-range: entry 30% cover 40%;
+    }
     body{
         font-family: fantasy;
     }
@@ -345,7 +361,6 @@ nav .fas{
         background-image: url(objects/Backgrouds/msc-bg2.jpg);
         background-size: cover;
         background-position-x: right 30x;
-         font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
     .logo{
         margin-left: -20px;
@@ -389,9 +404,11 @@ nav .fas{
     .pic{
         margin-left: 8px;
         margin-bottom: 20px;
+        width: 60vh;
     }
     .about-col-2 .about-cont{
-        margin-top: 10pxpx;
+        margin-top: 10px;
+        
     }
     .sub-title{
         font-size: 40px;
