--- a/style.css
+++ b/style.css
@@ -352,7 +352,7 @@ nav .fas{
     .block{
         animation: appear linear;
         animation-timeline: view();
-        animation-range: entry 10% cover 40%;
+        animation-range: entry 10px cover 40%;
     }
     body{
         font-family: fantasy;
